# fetchy-cli

./: README.md  pyproject.toml
src/fetchy_cli/: __init__.py  __main__.py  fetchy.py
