[build-system]
requires = ["setuptools"]                             # Boilerplate
build-backend = "setuptools.build_meta"               # Boilerplate

[project]
name = "fetchy-cli"                              # Your pip install <name> (must be unique)
version = "0.0.1"                               # Must be manually updated here with every change
authors = [
	{ name="espehon", email="espehon@gmail.com" },      # Email is optional (as array?)
]

description = "Fetch saved strings from the terminal!"               # Header on PyPI (above readme)
readme = "README.md"                                  # Boilerplate and will be added to the PyPI page
requires-python = ">=3.10"                            # Python version
dependencies = []                                     # Any site-package dependencies (as a list)
	                                                # NOTE: if any given, the pip test will be different


classifiers = [                                       	# Kinda boilerplate. Used as hashtags really
	"Programming Language :: Python :: 3",          # Tweak this to match your project
	"Development Status :: 1 - Planning",               # https://pypi.org/classifiers/
	"Environment :: Console",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Operating System :: OS Independent",
	"Topic :: Utilities"
]

[project.scripts]                               # The entrypoint for CLI app (if needed)
fet = "fetchy_cli.fetchy:fetchy"               	# SYNTAX: <commandlet> = "folder.file:function"
                                                # def main in __main__ and place in if name check
[project.urls]
"Homepage" = "https://github.com/espehon/fetchy-cli"              # Boilerplate links to GitHub repo
"Bug Tracker" = "https://github.com/espehon/fetchy-cli/issues"    # Boilerplate links to GitHub repo issues
